--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="works-grid3">
                     <div class="works-design-area">
                         <div class="works-image img-3">
-                            <img src="../image/work3.png" alt="実績サイト3の画像"width="350" height="200">
+                            <img src="image/work3.png" alt="実績サイト3の画像"width="350" height="200">
                         </div>
                     
                         <div class="works-design-outline">
@@ -225,7 +225,7 @@
                 <p>Skill</p>
             </div>
             <div class="back-design05">
-                <img src="../image/グループ 492.svg" alt="背景デザイン">
+                <img src="image/グループ 492.svg" alt="背景デザイン">
             </div>
             
             <div class="skill-grid">
