--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 
                 <div class="profile-design-area">
                     <div class="profile-image">
-                        <img class="profile-image-sp profile-images" src="image/profile.png" alt="プロフィール写真" border="0" width="400" height="500">
+                        <img class="profile-image-sp profile-images" src="image/top-image.png" alt="プロフィール写真" border="0" width="400" height="500">
                         <img class="profile-image-pc profile-images" src="image/profile@2x.png" alt="プロフィール写真" border="0" width="400" height="500">
                     
                     </div>
